syntax = "proto3";
package Reflect;

option java_multiple_files = true;
option java_package = "io.grpc.unitysyncservices";
option java_outer_classname = "Unity.Reflect.Services";
option objc_class_prefix = "HLW";
option csharp_namespace = "Unity.Reflect.Data";

import "Mathematics.proto";

message SyncManifest {
	map<string, ManifestEntry> entries = 1;
}

message ManifestEntry {
	string dstPath = 3;
	string srcHash = 4;
	string dstHash = 5;
	SyncBoundingBox boundingBox = 6;
}
